@@ -27,7 +27,6 @@ if (strpos ($_SERVER['PHP_SELF'], 'check_mines.php')) // Prevent direct access t
 load_languages ($db, $lang, array ('check_mines', 'common', 'global_includes', 'combat', 'footer', 'news'), $langvars);
 
 include './includes/explode_mines.php';
-include './includes/cancel_bounty.php';
 
 // Put the sector information into the array "sectorinfo"
 $result2 = $db->Execute ("SELECT * FROM {$db->prefix}universe WHERE sector_id=?", array ($sector));
@@ -172,12 +171,12 @@ if ($num_defences > 0 && $total_sector_mines > 0 && !$owner && $shipavg > $mine_
                         echo $l_chm_luckescapepod . "<br><br>";
                         $resx = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, sensors=0, computer=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_organics=0, ship_ore=0, ship_goods=0, ship_energy=?, ship_colonists=0, ship_fighters=100, dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, on_planet='N', rating=?, cleared_defences=' ', dev_lssd='N' WHERE ship_id=?", array ($start_energy, $rating, $playerinfo['ship_id']));
                         \bnt\dbop::dbresult ($db, $resx, __LINE__, __FILE__);
-                        cancel_bounty ($db, $playerinfo['ship_id']);
+                        \bnt\bntbounty::cancel ($db, $playerinfo['ship_id']);
                     }
                     else
                     {
                         // Or they lose!
-                        cancel_bounty ($db, $playerinfo['ship_id']);
+                        \bnt\bntbounty::cancel ($db, $playerinfo['ship_id']);
                         db_kill_player ($db, $playerinfo['ship_id']);
                     }
                 }
